// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createPseudoStyles() should create different styles for empty bgImage & nextImage 1`] = `
"
          .gatsby-background-image-gbi:before,
          .gatsby-background-image-gbi:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            transition-delay: 0.25s;
            transition: opacity 0.5s;
            
          }
          .gatsby-background-image-gbi:before {
            z-index: -100;
            
            
            background-color: #000;
            opacity: 1; 
          }
          .gatsby-background-image-gbi:after {
            z-index: -101;
            background-image: url(some_base64_string);
            
            background-color: #000;
          }
        "
`;

exports[`createPseudoStyles() should create different styles for empty bgImage & nextImage with opacity 0 1`] = `
"
          .gatsby-background-image-gbi:before,
          .gatsby-background-image-gbi:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            transition-delay: 0.25s;
            transition: opacity 0.5s;
            
          }
          .gatsby-background-image-gbi:before {
            z-index: -100;
            background-image: url(some_base64_string);
            
            background-color: #000;
            opacity: 0; 
          }
          .gatsby-background-image-gbi:after {
            z-index: -101;
            
            
            background-color: #000;
          }
        "
`;

exports[`createPseudoStyles() should create different styles for empty bgImage 1`] = `
"
          .gatsby-background-image-gbi:before,
          .gatsby-background-image-gbi:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            transition-delay: 0.25s;
            transition: opacity 0.5s;
            
          }
          .gatsby-background-image-gbi:before {
            z-index: -100;
            
            background-image: url(test.webp);
            background-color: #000;
            opacity: 1; 
          }
          .gatsby-background-image-gbi:after {
            z-index: -101;
            background-image: url(some_base64_string);
            
            background-color: #000;
          }
        "
`;

exports[`createPseudoStyles() should create different styles for empty bgImage with opacity 0 1`] = `
"
          .gatsby-background-image-gbi:before,
          .gatsby-background-image-gbi:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            transition-delay: 0.25s;
            transition: opacity 0.5s;
            
          }
          .gatsby-background-image-gbi:before {
            z-index: -100;
            background-image: url(some_base64_string);
            
            background-color: #000;
            opacity: 0; 
          }
          .gatsby-background-image-gbi:after {
            z-index: -101;
            
            background-image: url(test.webp);
            background-color: #000;
          }
        "
`;

exports[`createPseudoStyles() should create different styles for empty lastImage with opacity 0 1`] = `
"
          .gatsby-background-image-gbi:before,
          .gatsby-background-image-gbi:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            transition-delay: 0.25s;
            transition: opacity 0.5s;
            
          }
          .gatsby-background-image-gbi:before {
            z-index: -100;
            
            
            background-color: #000;
            opacity: 0; 
          }
          .gatsby-background-image-gbi:after {
            z-index: -101;
            
            background-image: url(test.webp);
            background-color: #000;
          }
        "
`;

exports[`createPseudoStyles() should create different styles for empty nextImage 1`] = `
"
          .gatsby-background-image-gbi:before,
          .gatsby-background-image-gbi:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            transition-delay: 0.25s;
            transition: opacity 0.5s;
            
          }
          .gatsby-background-image-gbi:before {
            z-index: -100;
            
            background-image: url(test.webp);
            background-color: #000;
            opacity: 1; 
          }
          .gatsby-background-image-gbi:after {
            z-index: -101;
            background-image: url(some_base64_string);
            
            background-color: #000;
          }
        "
`;

exports[`createPseudoStyles() should create different styles for empty nextImage with opacity 0 1`] = `
"
          .gatsby-background-image-gbi:before,
          .gatsby-background-image-gbi:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            transition-delay: 0.25s;
            transition: opacity 0.5s;
            
          }
          .gatsby-background-image-gbi:before {
            z-index: -100;
            background-image: url(some_base64_string);
            
            background-color: #000;
            opacity: 0; 
          }
          .gatsby-background-image-gbi:after {
            z-index: -101;
            
            background-image: url(test.webp);
            background-color: #000;
          }
        "
`;

exports[`createPseudoStyles() should create styles from given pseudoStyles Object 1`] = `
"
          .gatsby-background-image-gbi:before,
          .gatsby-background-image-gbi:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            transition-delay: 0.25s;
            transition: opacity 0.5s;
            
          }
          .gatsby-background-image-gbi:before {
            z-index: -100;
            
            background-image: url(test.webp);
            background-color: #000;
            opacity: 1; 
          }
          .gatsby-background-image-gbi:after {
            z-index: -101;
            background-image: url(some_base64_string);
            
            background-color: #000;
          }
        "
`;

exports[`createPseudoStyles() should create styles from given pseudoStyles Object with opacity 0 1`] = `
"
          .gatsby-background-image-gbi:before,
          .gatsby-background-image-gbi:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            transition-delay: 0.25s;
            transition: opacity 0.5s;
            
          }
          .gatsby-background-image-gbi:before {
            z-index: -100;
            background-image: url(some_base64_string);
            
            background-color: #000;
            opacity: 0; 
          }
          .gatsby-background-image-gbi:after {
            z-index: -101;
            
            background-image: url(test.webp);
            background-color: #000;
          }
        "
`;

exports[`createPseudoStyles() should create styles from given pseudoStyles Object without fadeIn 1`] = `
"
          .gatsby-background-image-gbi:before,
          .gatsby-background-image-gbi:after {
            content: '';
            display: block;
            position: absolute;
            width: 100%;
            height: 100%;
            top: 0;
            left: 0;
            transition: none;
            
          }
          .gatsby-background-image-gbi:before {
            z-index: -100;
            
            background-image: url(test.webp);
            background-color: #000;
            opacity: 1; 
          }
          .gatsby-background-image-gbi:after {
            z-index: -101;
            background-image: url(some_base64_string);
            
            background-color: #000;
          }
        "
`;

exports[`vendorPrefixBackgroundStyles() should return vendor prefixed backgroundStyles with defaults 1`] = `
"transition-delay: 0.25s;
            transition: opacity 0.5s;"
`;

exports[`vendorPrefixBackgroundStyles() should return vendor prefixed backgroundStyles with parameters 1`] = `
"transition-delay: contain;
            transition: opacity 0.5s;"
`;
